fixed footer on mobile

--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 150px;
-  padding: 0px 50px;
+  // height: 150px;
+  padding: 36px 50px;
   color: rgba(250,250,250,0.8);
   margin-top: 64px;
 }
@@ -24,4 +24,13 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    flex-flow: column-reverse;
+  }
+  .footer-links {
+    margin-top: 16px;
+  }
 }
